# goodbye-trump-twitter

./: Install_wsl.md  LICENSE  MANIFEST.in  README-ja.md  README.md  entry_points.cfg  linux_dlib_require.txt  main.py  requerements.txt  requirements.txt  setup.cfg  setup.py
app/: __init__.py  __main__.py  config.py  finder.py  logger.py  main.py  profiler.py  time_parser.py
gbtrump/: __init__.py  config.py  finder.py  gbtrump.py  main.py  profiler.py  time_parser.py
