[metadata]
name = gbtrump
version = 0.0.1
#description =P
long_description = file: README.md
#long_description_content_type = text/markdown
author = RiniaOk_yama
license = MIT
license_file = LICENSE


[options]
include_package_data = True
packages=find:
scripts = gbtrump/__main__.py
entry_points = file: entry_points.cfg
